fix: some JEI fixes & cleanup for quests & loot crates
Added some caching for itemstack -> list of relevant "recipes" for both
quests and loot crates

Fixed a couple of cases where showing usage or recipes wasn't working

Loot crate item name can now be a translation key (set in loot table settings,
loot crate section)